Add Flink consumer to consume events from kafka topic